# nexa-lang

./: .dockerignore  .gitignore  AUDIT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.cli  PLAN_MULTI_TARGET.md  README.md  TODO  docker-compose.prod.yml  setup.sh
.claude/: settings.json
.github/workflows/: deploy-registry.yml  docker-cli.yml  release.yml  snapshot.yml
audits/: AUDIT_2026_04_05.md
crates/cli/: Cargo.toml  build.rs
crates/cli/src/application/: commands.rs  credentials.rs  mod.rs  project.rs  updater.rs
crates/cli/src/application/commands/: build.rs  init.rs  mod.rs  module.rs  test.rs
crates/cli/src/application/targets/: desktop.rs  dispatcher.rs  mod.rs  rust.rs  web.rs
crates/cli/src/infrastructure/: ui.rs
crates/cli/src/interfaces/: cli.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: lib.rs
crates/compiler/src/application/services/: codegen.rs  lexer.rs  lower.rs  mod.rs  optimizer.rs  packager.rs  parser.rs  resolver.rs  semantic.rs  types.rs  wasm_codegen.rs
crates/compiler/src/application/services/wasm_codegen/: expr_codegen.rs  gc_runtime.rs  method_codegen.rs  shape.rs
crates/compiler/src/domain/: ast.rs  ir.rs  span.rs
crates/compiler/src/infrastructure/: mem_source.rs
crates/registry/: Cargo.toml  Dockerfile
crates/registry/migrations/: 20240004_create_api_tokens.sql  20240006_create_refresh_tokens.sql
crates/registry/src/: main.rs
crates/registry/src/application/ports/: storage.rs
crates/registry/src/application/services/: auth.rs  packages.rs
crates/registry/src/domain/: mod.rs  refresh_token.rs  token.rs
crates/registry/src/infrastructure/: postgres.rs
crates/registry/src/interfaces/: http.rs
crates/server/: Cargo.toml
crates/server/src/application/: state.rs
crates/server/src/interfaces/: http.rs
docs/superpowers/plans/: 2026-04-08-phase1-multi-target.md
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/snippets/: nexa.json
editors/vscode/syntaxes/: nexa.tmLanguage.json
example/: .gitignore  nexa-compiler.yaml  project.json
example/modules/core/: module.json
example/modules/core/src/main/: app.nx
nginx/: registry.conf
scripts/: release.sh
stdlib/: README.md
stdlib/src/: option.nx  result.nx
stdlib/src/async/: CompletableFuture.nx  Future.nx
stdlib/src/collections/: ArrayList.nx  Deque.nx  HashMap.nx  HashSet.nx  LinkedList.nx  PriorityQueue.nx  Queue.nx  Stack.nx  SynchronizedArrayList.nx  SynchronizedDeque.nx  SynchronizedHashMap.nx  SynchronizedHashSet.nx  SynchronizedQueue.nx  SynchronizedStack.nx
stdlib/src/io/: Console.nx  File.nx
stdlib/src/math/: Math.nx  Random.nx
stdlib/src/net/: HttpClient.nx  Socket.nx
stdlib/src/process/: Env.nx  Process.nx
stdlib/src/server/: HttpServer.nx
stdlib/src/str/: Str.nx  StringBuilder.nx
