[package]
name = "nexa"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexa"
path = "src/main.rs"

[dependencies]
nexa-compiler = { path = "../compiler" }
nexa-server   = { path = "../server" }
tokio         = { version = "1", features = ["full"] }
clap          = { version = "4", features = ["derive"] }
axum          = "0.7"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
serde_yaml    = "0.9"
thiserror     = "1"
notify        = "6"
sha2          = "0.10"
zip           = "2.1"
reqwest       = { version = "0.12", default-features = false, features = ["blocking", "multipart", "json", "rustls-tls"] }
rpassword          = "7"
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3"
