[package]
name = "nexa"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexa"
path = "src/main.rs"

[dependencies]
nexa-compiler = { path = "../compiler" }
nexa-server   = { path = "../server" }
tokio         = { version = "1", features = ["full"] }
clap          = { version = "4", features = ["derive"] }
axum          = "0.7"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
serde_yaml    = "0.9"
thiserror     = "1"
notify        = "6"
sha2          = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64        = "0.22"
rand          = "0.8"
hex           = "0.4"
zip           = "2.1"
reqwest       = { version = "0.12", default-features = false, features = ["blocking", "multipart", "json", "rustls-tls"] }
rayon              = "1"
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
console            = "0.15"
indicatif          = "0.17"
dialoguer          = "0.11"

[dev-dependencies]
tempfile = "3"
mockito  = "1"
