[package]
name = "nexa-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tracing    = { workspace = true }
nexa-compiler = { path = "../compiler" }
